# Todolist

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_main.yaml  push_any_excpet_main.yaml
deploy/: .env  docker-compose.yaml
tests/: app_tests.py  factories.py
tests/test_core/: bot_tests.py  test_signup.py
todolist/: settings.py  urls.py
todolist/bot/: admin.py  models.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_alter_tguser_options_alter_tguser_verification_code.py
todolist/bot/tg/: client.py  schemas.py
todolist/core/: admin.py  apps.py  fields.py  models.py  serializers.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goals_category_model.py  0001_initial.py  0002_add_goals_model.py  0002_create_new_objects.py  0003_alter_goalcategory_board.py  0003_comment.py  0004_alter_goal_category_alter_goal_description_and_more.py
