[tool.poetry]
name = "SkyproTODOLIST"
version = "0.1.0"
description = ""
authors = ["Oskar Agzigitov <oskar.agzigitov@yandex.ru>"]
readme = "README.md"
packages = [{include = "SkyproTODOLIST"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"