[tool.poetry]
name = "skyproTODOLIST"
version = "0.1.0"
description = ""
authors = ["Oskar Agzigitov <oskar.agzigitov@yandex.ru>"]
readme = "README.md"
packages = [{include = "SkyproTODOLIST"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.5"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.2.0"
gunicorn = "^20.1.0"
django-filter = "^23.1"
pytest-django = "^4.5.2"
django-extensions = "^3.2.1"
ansible-vault-win = "^1.0.0"
pydantic = "^1.10.7"
requests = "^2.30.0"




[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 120
skip_glob = [
    '**/migrations/**',
    '.git',
    '.github',
    '.venv',
    'deploy',
]
combine_as_imports = true
combine_star = true
know_first_party = 'todolist'

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true
skip-magic-trailing-comma = true
exclude = '''
(
  /(
      \.git
    | \.github
    | \.venv
    | \.pytest_cache
    | deploy
  )/
)
'''
